--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <title>区块链物品交易平台</title>
   <link rel="stylesheet" href="style.css" />
   <!-- 引入 ethers.js 库 -->
+  <script src="https://cdn.ethers.io/lib/ethers-5.7.umd.min.js"></script>
+  <!--
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.0/dist/ethers.min.js"></script>
+  -->
 </head>
 <body>
   <header>
