--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
   <title>区块链物品交易平台</title>
   <link rel="stylesheet" href="style.css" />
   <!-- 引入 ethers.js 库 -->
-  <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.min.js"></script>
-  <!--
-  <script src="https://cdn.ethers.io/lib/ethers-5.7.umd.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.0/dist/ethers.min.js"></script>
-  -->
+  <!-- 改为明确指定 ES 模块版本 -->
+  <script type="module" src="https://cdn.jsdelivr.net/npm/ethers@6.12.0/+esm"></script>
+
 </head>
 <body>
   <header>
