--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
     <section id="uploadSection" class="hidden animated">
       <h2>📤 上传商品</h2>
       <form id="uploadForm">
-        <input type="text" id="productName" placeholder="商品名称" required />
-        <input type="file" id="productImage" required />
-        <!-- 新增商品描述信息 -->
-        <input type="text" id="productBrand" placeholder="品牌（可选）" />
-        <input type="text" id="productModel" placeholder="型号（可选）" />
-        <input type="text" id="productSerial" placeholder="序列号（可选）" />
-        <textarea id="productDesc" placeholder="商品描述（可选）"></textarea>
+        <input type="text" id="productName" name="productName" placeholder="商品名称" required />
+        <input type="file" id="productImage" name="productImage" required />
+        <input type="text" id="productBrand" name="productBrand" placeholder="品牌（可选）" />
+        <input type="text" id="productModel" name="productModel" placeholder="型号（可选）" />
+        <input type="text" id="productSerial" name="productSerial" placeholder="序列号（可选）" />
+        <textarea id="productDesc" name="productDesc" placeholder="商品描述（可选）"></textarea>
         <button type="submit">上传并上链</button>
       </form>
     </section>
