--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     </section>
 
     <!-- 我的出售记录 -->
-    <section id="mySalesSection" class="hidden animated">
+    <!-- <section id="mySalesSection" class="hidden animated">
       <h2>💰 我的出售记录</h2>
       <div id="mySalesList">加载中...</div>
-    </section>
+    </section> -->
   </main>
 
   <script type="module" src="script.js"></script>
