--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="myItemsSection" class="hidden animated">
       <div class="section-header">
         <h2>📦 我的商品</h2>
-        <button id="toggleUploadBtn" class="upload-btn">➕ 上传商品</button>
+        <button id="toggleUploadBtn" class="upload-btn">📤 上传商品</button>
       </div>
 
       <!-- 上传表单 -->
